finishing up html bebe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <img src="logo.png" height="60px" width="60px" alt="today-i-leared" />
       <h1>Today I Learned!</h1>
+      <button disabled="disabled">Share a fact</button>
     </header>
     <form action="submit">
       <input
@@ -17,7 +18,7 @@
         name=""
         id=""
         placeholder="Share a fact with the world..."
-      />
+      /><span>200</span>
       <input type="text" name="" id="" placeholder="Trustworthy spurce..." />
       <select>
         <option value=""></option>
@@ -25,6 +26,7 @@
         <option value="science">Science</option>
         <option value="society">Society</option>
       </select>
+      <button type="submit">Post</button>
     </form>
     <main>
       <aside>
@@ -45,6 +47,11 @@
               <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
               <span>#techology#</span>
             </p>
+            <div class="">
+              <button>👍 <b> 54</b></button>
+              <button>🤯 <b> 54</b></button>
+              <button>⛔️ <b> 54</b></button>
+            </div>
           </li>
           <li>
             <p>
@@ -58,6 +65,11 @@
               >
               <span>#society#</span>
             </p>
+            <div class="">
+              <button>👍 <b> 54</b></button>
+              <button>🤯 <b> 54</b></button>
+              <button>⛔️ <b> 54</b></button>
+            </div>
           </li>
         </ul>
       </section>
