--- a/index.html
+++ b/index.html
@@ -4,84 +4,116 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Sono:wght@400;600&display=swap"
       rel="stylesheet"
     />
+
+    <link href="style.css" rel="stylesheet" />
     <title>Today I Learned!</title>
   </head>
   <body>
-    <header class="header">
-      <div class="logo">
-        <img src="logo.png" height="60px" width="60px" alt="today-i-leared" />
-        <h1>Today I Learned!</h1>
-      </div>
-      <button>Share a fact</button>
-    </header>
-    <form class="fact-form" action="submit">
-      <input
-        type="text"
-        name=""
-        id=""
-        placeholder="Share a fact with the world..."
-      /><span>200</span>
-      <input type="text" name="" id="" placeholder="Trustworthy spurce..." />
-      <select>
-        <option value=""></option>
-        <option value="technology">Technology</option>
-        <option value="science">Science</option>
-        <option value="society">Society</option>
-      </select>
-      <button type="submit">Post</button>
-    </form>
-    <main>
-      <aside>
-        <ul>
-          <li><button class="button">All</button></li>
-          <li><button class="button">Technology</button></li>
-          <li>
-            <button class="button">Science</button>
-          </li>
-          <li><button class="button">Society</button></li>
-        </ul>
-      </aside>
-      <section>
-        <ul>
-          <li class="fact">
-            <p>
-              React is being developed by Meta (formerly facebook)
-              <a href="https://opensource.fb.com/" target="_blank">(Source)</a>
-              <span class="fact-cat">#techology#</span>
-            </p>
-            <div class="">
-              <button>👍 <b> 54</b></button>
-              <button>🤯 <b> 54</b></button>
-              <button>⛔️ <b> 54</b></button>
-            </div>
-          </li>
-          <li class="fact">
-            <p>
-              Millennial dads spend 3 times as much time with their kids than
-              their fathers spent with them. In 1982, 43% of fathers had never
-              changed a diaper. Today, that number is down to 3%
-              <a
-                href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
-                target="_blank"
-                >(Source)</a
+    <div class="container">
+      <header class="header">
+        <div class="logo">
+          <img
+            src="logo.png"
+            height="68"
+            width="68"
+            alt="Today I Learned Logo"
+          />
+          <h1>Today I Learned</h1>
+        </div>
+
+        <button class="btn btn-large">Share a fact</button>
+      </header>
+
+      <form class="fact-form">
+        <input type="text" placeholder="Share a fact with the world..." />
+        <span>200</span>
+        <input type="text" placeholder="Trustworthy source..." />
+        <select>
+          <option value="">Choose category:</option>
+          <option value="technology">Technology</option>
+          <option value="science">Science</option>
+          <option value="finance">Finance</option>
+        </select>
+        <button class="btn btn-large">Post</button>
+      </form>
+
+      <main class="main">
+        <aside>
+          <ul>
+            <li class="category">
+              <button class="btn btn-all-categories">All</button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #3b82f6"
               >
-              <span class="fact-cat">#society#</span>
-            </p>
-            <div class="">
-              <button>👍 <b> 54</b></button>
-              <button>🤯 <b> 54</b></button>
-              <button>⛔️ <b> 54</b></button>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+                Technology
+              </button>
+            </li>
+            <li class="category">
+              <button
+                class="btn btn-category"
+                style="background-color: #16a34a"
+              >
+                Science
+              </button>
+            </li>
+          </ul>
+        </aside>
+
+        <section>
+          <ul>
+            <li class="fact">
+              <p>
+                React is being developed by Meta (formerly facebook)
+                <a
+                  class="source"
+                  href="https://opensource.fb.com/"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #3b82f6"
+                >technology</span
+              >
+              <div class="vote-buttons">
+                <button>👍 24</button>
+                <button>🤯 9</button>
+                <button>⛔️ 4</button>
+              </div>
+            </li>
+
+            <li class="fact">
+              <p>
+                Millennial dads spend 3 times as much time with their kids than
+                their fathers spent with them. In 1982, 43% of fathers had never
+                changed a diaper. Today, that number is down to 3%
+
+                <a
+                  class="source"
+                  href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
+                  target="_blank"
+                  >(Source)</a
+                >
+              </p>
+              <span class="tag" style="background-color: #eab308">society</span>
+              <div class="vote-buttons">
+                <button>👍 11</button>
+                <button>🤯 2</button>
+                <button>⛔️ 0</button>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
